--- a/CSS/login.css
+++ b/CSS/login.css
@@ -30,6 +30,7 @@ section{
 .cart{
     background-image: url(../IMG/cart.jpg);
     background-size: cover;
+    position: relative;
 }
 
 .form-section{
@@ -130,4 +131,36 @@ i{
     left: 28px;
     font-size: 16px;
     color: #2348f1;
+}
+.main-link{
+    position: absolute;
+    width: 50%;
+    height: 50px;
+   left: 100px;
+   bottom: 50px;
+    text-decoration: none;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+}
+.back{
+    width: 100%;
+    height: 100%;
+    background: #110de786;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: #fff;
+    font-weight: 600;
+    border-radius: 10px;
+}
+.back:hover{
+    color: #fff;
+    background: #110de7d8;
+}
+.fa-arrow-left-long{
+    color: #fff;
 }
