--- a/CSS/index.css
+++ b/CSS/index.css
@@ -93,6 +93,8 @@ section{
     background-size: cover;
     position: absolute;
     left: 0;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     bottom: 0;
     background-blend-mode: multiply;
     background-color: rgba(28, 42, 240, 0.151);
@@ -114,6 +116,8 @@ p{
     font-weight: 500;
     text-align: center;
     border-radius: 10px;
+    border-top-left-radius: 50px;
+    border-bottom-right-radius: 50px;
     cursor: pointer;
     left: 400px;
     border: 2px solid #00000052;
@@ -125,6 +129,9 @@ p{
 p:hover{
     background-color: #00000085;
     transform: translateY(-5px);
+    border-color: #ebee31;
+    box-shadow: 2px 2px 5px #7a7a7a88,
+    -2px -2px 5px #00000088;
 }
 strong{
     color: #ff0000;
