--- a/CSS/index.css
+++ b/CSS/index.css
@@ -64,6 +64,7 @@ a:hover{
     background: #0e049b;
 }
 .container{
+    position: relative;
     height: 100%;
     width: 100%;
     overflow-y: scroll;
@@ -86,18 +87,20 @@ section{
     position: absolute;
     right: 0;
     bottom: 0;
-}.image-two{
+}
+.image-two{
     width: 60%;
     height: 90%;
     background-image: url(../IMG/person.jpg);
     background-size: cover;
     position: absolute;
     left: 0;
+    z-index: 5;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     bottom: 0;
     background-blend-mode: multiply;
-    background-color: rgba(28, 42, 240, 0.151);
+    background-color: rgba(28, 42, 240, 0.219);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -133,14 +136,13 @@ p:hover{
     box-shadow: 2px 2px 5px #7a7a7a88,
     -2px -2px 5px #00000088;
 }
-strong{
-    color: #ff0000;
-}
+
+
 .get-started{
     position: absolute;
     bottom: 50px;
-    left: 600px;
-    width: 250px;
+    left: 550px;
+    width: 300px;
     height: 50px;
 
 }
@@ -152,12 +154,37 @@ strong{
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: #0e049b;
-    border: 2px solid #0e049b;
+    background: #2c1ef0;
+    border: 2px solid#2c1ef0;
     border-radius: 10px;
     transition:  0.5s ease-in-out;
     box-shadow: 2px 2px 5px #00000063,
     -2px -2px 5px #00000063;
+}
+.get-started a:hover{
+    background: #0e049b;
+}
+strong{
+
+      position: absolute;
+      bottom: 0;
+      font-size: 56px;
+      color: #f9fd11;
+}
+h3{
+    position: absolute;
+    top:10px;
+    left: 10px;
+    font-size: 56px;
+    font-weight: 800;
+    cursor: pointer;
+    transition: 0.5s ease-in-out;
+    color: #0000008f;
+}
+h3:hover{
+    color: #000;
+    transform: translateX(10px);
 }
