--- a/CSS/login.css
+++ b/CSS/login.css
@@ -38,7 +38,8 @@ section{
    display: flex;
    justify-content: center;
    align-items: center;
-
+   flex-direction: column;
+   gap: 20px;
 
 }
 h2{
@@ -164,4 +165,16 @@ i{
 }
 .fa-arrow-left-long{
     color: #fff;
+}
+p{
+    width: 300px;
+    height: 40px;
+    box-shadow: 4px 6px   26px 10px    #0000000e,
+                -4px -6px  26px 10px  #0000000e;
+    transition: 0.5s ease-in-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    color: #ff0000;
 }
