--- a/CSS/signup.css
+++ b/CSS/signup.css
@@ -48,26 +48,40 @@ form{
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 30px;
 }
-h1,h2{
+h2{
     color: #fff;
+    top: 10px;
+    left: 50%;
+    position: absolute;
+    
+  
 }
-
 .inputBox{
-    width: 50%;
-    height: 80%;
+    height: 70%;
+    width: 45%;
     display: flex;
     justify-content: center;
     align-items: center;
-
     flex-direction: column;
-    
+    gap: 5px;
+
 }
 
-input{
-    width: 90%;
-    height: 40px;
+.inputBox  .check{
+    position: relative;
+    width: 100%;
+    height: 50px;
     margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+input{
+    width: 95%;
+    height: 100%;
     outline: none;
     border-radius: 10px;
     border: 2px solid  #29282883;
@@ -75,20 +89,9 @@ input{
     cursor: pointer;
     transition: 0.5s ease-in-out;
     background: #e6e4e4;
-}
-input[type="radio"]{
+}input[type="radio"]{
     height: 20px;
     width: 20px;
-}
-select{
-    width: 90%;
-    height: 40px;
-    text-align: center;
-    padding: 0 0 0 30px;
-    margin-top: 20px;
-    outline: none;
-    border-radius: 10px;
-    border: none;
 }
 input:focus{
     box-shadow: 4px 4px 8px #1111111c,
@@ -97,30 +100,48 @@ input:focus{
     transform: translateY(-5px);
     border: 2px solid #2b2919;
 }
+img{
+    position: absolute;
+    right: 20px;
+    cursor: pointer;
+}
+select{
+    width: 95%;
+    height: 100%;
+    text-align: center;
+    padding: 0 0 0 30px;
+    margin-top: 20px;
+    outline: none;
+    border-radius: 10px;
+    border: none;
+}
+
 
 input[type="submit"]{
     position:absolute;
-    bottom: 10px;
     width: 40%;
-    background:  #fff;
+    height: 40px;
     border: none;
+    bottom: 7px;
     font-weight: 700;
-    color:f#0000;
+    background:  #fff;
+   
     transition: 0.5s ease-in-out;
 }
-h2{
-    position: absolute;
-    top: 10px
-}
-label{
-    font-weight: 700;
-    font-size: 16px;
-    
-}
 input[type="submit"]:hover{
-       transform: translateY(-5px);
-       background: #f5e9b2;
+    transform: translateY(-5px);
+    background: #f5e9b2;
 
+}
+#gender{
+    color: #000;
+    font-weight: 700;
+ 
+}
+.gender{
+
+
+    gap: 20px;
 }
 
 a{
@@ -176,25 +197,3 @@ p{
     border-radius: 10px;
     font-weight: 700;
 }
-.two{
-  
-    display:flex;
-    justify-content: start;
-}
-.two input{
-    margin-top: 45px;
-}
-.pwd{
-    position: relative;
-    height: 40px;
-    width: 90%;
-    background-color: red;
-}
-img{
-    position: absolute;
-    right: 20px;
-    top: 100px;
-    cursor: pointer;
-}
-
-
