--- a/CSS/index.css
+++ b/CSS/index.css
@@ -376,7 +376,7 @@ transform: scale(1.2);
     color: #fff;
     width: 200px;
     height: 40px;
-    background: #055d97;
+    background: #0a7ac5;
     display: flex;
     justify-content: center;
     align-items: center;
